--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js & webpack --w"
-
+    "start": "nodemon ./node_modules/.bin/babel-node --presets react,es2015 server.js & webpack --w",
+    "lint": "node_modules/.bin/esw webpack.config.js ./src",
+    "lint:watch": "npm run lint -- --watch"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "body-parser": "^1.16.0",
     "css-loader": "^0.26.1",
     "express": "^4.13.3",
     "lodash": "^4.17.4",
@@ -41,5 +43,12 @@
     "webpack": "^1.12.9",
     "youtube-api-search": "0.0.5"
   },
-  "homepage": "https://github.com/kaladin9017/Game-Dash#readme"
+  "homepage": "https://github.com/kaladin9017/Game-Dash#readme",
+  "devDependencies": {
+    "eslint": "2.9.0",
+    "eslint-plugin-import": "1.6.1",
+    "eslint-plugin-react": "5.0.1",
+    "eslint-watch": "2.1.11",
+    "colors": "1.1.2"
+  }
 }
