--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./node_modules/.bin/babel-node --presets react,es2015 server.js & webpack --w",
     "lint": "node_modules/.bin/esw webpack.config.js ./src",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "start": "nodemon ./node_modules/.bin/babel-node --presets react,es2015 & server.js & webpack --w"
   },
   "repository": {
     "type": "git",
