--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "body-parser": "^1.16.0",
     "css-loader": "^0.26.1",
     "express": "^4.13.3",
+    "file-loader": "^0.10.0",
     "lodash": "^4.17.4",
+    "mime": "^1.3.4",
     "promise": "^7.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -42,6 +44,7 @@
     "sequelize": "^3.30.1",
     "sequelize-cli": "^2.5.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "youtube-api-search": "0.0.5"
   },
