--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-promise": "^0.5.3",
     "sequelize": "^3.30.1",
     "sequelize-cli": "^2.5.1",
