--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.26.1",
     "express": "^4.13.3",
     "file-loader": "^0.10.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mime": "^1.3.4",
     "npm-run-all": "^4.0.1",
