--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.16.0",
     "css-loader": "^0.26.1",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
@@ -48,6 +49,7 @@
     "sequelize": "^3.30.1",
     "sequelize-cli": "^2.5.1",
     "style-loader": "^0.13.1",
+    "stylus-loader": "1.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "youtube-api-search": "0.0.5"
