--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "promise": "^7.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-html-parser": "^1.0.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
