--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.26.1",
     "express": "^4.13.3",
     "file-loader": "^0.10.0",
+    "google-map-react": "^0.22.3",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mime": "^1.3.4",
@@ -40,6 +41,7 @@
     "promise": "^7.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
