--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
-./public/bundle.js
-./public/bundle.js.map
+/public/bundle.js
+/public/bundle.js.map
 npm-debug.log
 .env
 .local-env
+/config/config.json
