--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Game-Dash",
   "version": "1.0.0",
-  "description": "",
+  "description": "A dashboard for games",
   "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel nmon wpack lint:watch",
@@ -29,6 +29,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "css-loader": "^0.26.1",
     "dotenv": "^4.0.0",
@@ -36,9 +37,15 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "jquery": "^3.1.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mime": "^1.3.4",
     "npm-run-all": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
     "promise": "^7.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
