--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/kaladin9017/Game-Dash/issues"
   },
   "dependencies": {
+    "algoliasearch": "^3.21.1",
     "axios": "^0.15.3",
     "babel": "^6.3.13",
     "babel-cli": "^6.3.15",
@@ -36,6 +37,7 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
+    "getstream": "^3.5.0",
     "jquery": "^3.1.1",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
