added twitch stuff

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ TRUE_FALSE=true
 LOCAL_SECRET=asfagsdgj2234w3wdsds
 ALGOLIA_SEARCH_ONLY_KEY=0aa7087f20baed2728377625b0684574
 ALGOLIA_APP_ID=O8N9EWCCZ3
+REDDIT_CLIENT_ID=fsQS5iesr6biPQ
+REDDIT_CLIENT_SECRET=OaHdbFbDjiTO41MtTf3YSK_-mf8
