--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mime": "^1.3.4",
+    "moment": "^2.17.1",
     "npm-run-all": "^4.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
@@ -50,12 +51,12 @@
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "promise": "^7.1.1",
+    "qs": "^6.3.1",
+    "querystring": "^0.2.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-
-    "react-html-parser": "^1.0.3",
-
     "react-google-maps": "^4.11.0",
+    "react-html-parser": "^1.0.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
